--- a/dark_psychology.html
+++ b/dark_psychology.html
@@ -281,6 +281,86 @@
     "real_life_example": "Streaming platforms showcasing hundreds of titles while autoplay selects the default.",
     "psychology_trigger": "Analysis paralysis",
     "business_use_case": "Present many choices but highlight or preselect your most profitable or intended path."
+  },
+    {
+    "id": 21,
+    "title": "The Illusion of Scarce Access",
+    "concept": "Gate content or membership behind an ‘invite-only’ or ‘waitlist’ wall to increase perceived value.",
+    "real_life_example": "Clubhouse launched as invite-only, creating viral demand.",
+    "psychology_trigger": "Exclusivity bias",
+    "business_use_case": "Use access control to create buzz and make users feel like insiders when they finally get in."
+  },
+  {
+    "id": 22,
+    "title": "The Loyalty Trap",
+    "concept": "Reward users just enough to keep them invested, but not enough to fully satisfy.",
+    "real_life_example": "Airline miles that expire, requiring more bookings to retain status.",
+    "psychology_trigger": "Operant conditioning + sunk cost",
+    "business_use_case": "Design reward systems that stretch the goalpost to keep users in motion toward your revenue targets."
+  },
+  {
+    "id": 23,
+    "title": "Tokenized Control",
+    "concept": "Give users symbolic control over decisions while the real choices remain unchanged.",
+    "real_life_example": "“Rate your delivery experience!” with no visible result of feedback.",
+    "psychology_trigger": "Illusion of control",
+    "business_use_case": "Let users vote or interact in ways that increase perceived ownership without shifting actual operations."
+  },
+  {
+    "id": 24,
+    "title": "Aesthetic Authority",
+    "concept": "Use design sophistication to create trust, legitimacy, and perceived value.",
+    "real_life_example": "Landing pages with minimalist UX and Apple-like fonts commanding premium prices.",
+    "psychology_trigger": "Aesthetic bias",
+    "business_use_case": "Invest in typography, layout, and whitespace to create the illusion of superiority — even with commodity products."
+  },
+  {
+    "id": 25,
+    "title": "The Dopamine Ladder",
+    "concept": "Use low-effort actions to trigger feedback, creating a chain of micro-validations.",
+    "real_life_example": "Getting a badge for completing a quiz, then unlocking more ‘missions’.",
+    "psychology_trigger": "Reward reinforcement",
+    "business_use_case": "Use badges, feedback loops, or confetti effects to keep users climbing your engagement system."
+  },
+  {
+    "id": 26,
+    "title": "Delayed Denial",
+    "concept": "Let users begin a process, then block the end until after they’ve invested time.",
+    "real_life_example": "Online design tools that let you build but require payment to export.",
+    "psychology_trigger": "Sunk cost + frustration bias",
+    "business_use_case": "Let users feel creative freedom, then monetize at the last point before value realization."
+  },
+  {
+    "id": 27,
+    "title": "The Trust Sandwich",
+    "concept": "Place a manipulative request between two trust-building statements.",
+    "real_life_example": "“We care about your privacy. Please accept all cookies to enhance your experience.”",
+    "psychology_trigger": "Trust anchoring",
+    "business_use_case": "Structure persuasive flows by surrounding them with empathy, transparency, or user-centered language."
+  },
+  {
+    "id": 28,
+    "title": "Pre-Baited Identity",
+    "concept": "Tie user self-image to platform behavior, so any exit feels like identity loss.",
+    "real_life_example": "Strava and Peloton show stats and streaks that define ‘who you are’.",
+    "psychology_trigger": "Identity fusion",
+    "business_use_case": "Encourage users to build public profiles and share milestones — exiting becomes psychologically painful."
+  },
+  {
+    "id": 29,
+    "title": "The Overcorrect",
+    "concept": "Admit to a minor flaw or weakness to build trust before a major pitch.",
+    "real_life_example": "“We’re not the cheapest option — but we are the best value.”",
+    "psychology_trigger": "Honesty priming",
+    "business_use_case": "Use structured vulnerability to make sales language more believable and increase trust-to-conversion rates."
+  },
+  {
+    "id": 30,
+    "title": "The Hope Hook",
+    "concept": "Give users a glimpse of their ideal future state before showing the cost to get there.",
+    "real_life_example": "Fitness apps showing post-transformation previews after 3 steps of signup.",
+    "psychology_trigger": "Anticipation bias",
+    "business_use_case": "Visually project an aspirational outcome before asking for money, subscription, or time investment."
   }
 ]
 
