--- a/dark_psychology.html
+++ b/dark_psychology.html
@@ -361,6 +361,246 @@
     "real_life_example": "Fitness apps showing post-transformation previews after 3 steps of signup.",
     "psychology_trigger": "Anticipation bias",
     "business_use_case": "Visually project an aspirational outcome before asking for money, subscription, or time investment."
+  },
+    {
+    "id": 31,
+    "title": "The Mirage of Progress",
+    "concept": "Show inflated progress or fake milestones early to boost completion rates.",
+    "real_life_example": "“You’re 40% done!” after entering just your email in a form.",
+    "psychology_trigger": "Endowment + progress bias",
+    "business_use_case": "Use progress bars or completion steps early to lock users into finishing onboarding, quizzes, or purchases."
+  },
+  {
+    "id": 32,
+    "title": "Shame Suppression Loop",
+    "concept": "Make users feel they’ll be judged or embarrassed if they don’t complete an action.",
+    "real_life_example": "“Your friends will know if you leave now.” or showing ‘0% donation’ next to a name.",
+    "psychology_trigger": "Social comparison + guilt",
+    "business_use_case": "Use subtle reminders of public visibility to increase form completions, tips, or contributions."
+  },
+  {
+    "id": 33,
+    "title": "Soft Opt-In Traps",
+    "concept": "Pre-check consent boxes, add hidden subscriptions, or bundle decisions into others.",
+    "real_life_example": "Automatically enrolling users into newsletters when downloading a free PDF.",
+    "psychology_trigger": "Inertia bias",
+    "business_use_case": "Add frictionless opt-ins that users rarely uncheck to expand audience or data collection."
+  },
+  {
+    "id": 34,
+    "title": "Authority Echoes",
+    "concept": "Repeat quotes or statements from influential people to lend weight to your message.",
+    "real_life_example": "“As Warren Buffett says…” on investment landing pages.",
+    "psychology_trigger": "Argument from authority",
+    "business_use_case": "Use quotes and wisdom from famous figures to make your pitch feel timeless and irrefutable."
+  },
+  {
+    "id": 35,
+    "title": "Frictionless Habits",
+    "concept": "Make repeating an action easier than breaking the loop.",
+    "real_life_example": "Subscription services that renew silently unless you cancel via multi-step flows.",
+    "psychology_trigger": "Default bias + habit inertia",
+    "business_use_case": "Reduce friction for repeat behaviors and increase friction for cancellations or exits."
+  },
+  {
+    "id": 36,
+    "title": "The Familiarity Hook",
+    "concept": "Make your product resemble existing patterns or interfaces to lower skepticism.",
+    "real_life_example": "New banking apps designed to mimic traditional checkbooks or cash envelopes.",
+    "psychology_trigger": "Cognitive fluency",
+    "business_use_case": "Design experiences that feel intuitive by echoing familiar visuals, copy, or flow."
+  },
+  {
+    "id": 37,
+    "title": "The Praise-Withdrawal Cycle",
+    "concept": "Give users regular praise, then pull it back to prompt re-engagement.",
+    "real_life_example": "“You were a top contributor last month!” — followed by silence unless activity resumes.",
+    "psychology_trigger": "Validation withdrawal",
+    "business_use_case": "Trigger reactivation through conditional praise, badges, or exclusive recognition cycles."
+  },
+  {
+    "id": 38,
+    "title": "False Floor Pricing",
+    "concept": "Advertise a deceptively low price and reveal the full cost in later steps.",
+    "real_life_example": "Airlines showing $49 fares that balloon after seat, bag, and tax add-ons.",
+    "psychology_trigger": "Anchoring + commitment bias",
+    "business_use_case": "Use entry pricing to attract users, then upsell through required add-ons and surcharges."
+  },
+  {
+    "id": 39,
+    "title": "The Status Scar",
+    "concept": "Tie user status to visual cues that deteriorate if they don’t engage.",
+    "real_life_example": "Elite user status expiring and turning gray after inactivity.",
+    "psychology_trigger": "Loss of status",
+    "business_use_case": "Create visible status levels with expiration pressure to keep high-value users active."
+  },
+  {
+    "id": 40,
+    "title": "Framed Regret",
+    "concept": "Show what a user could have had if they had acted sooner.",
+    "real_life_example": "“You missed out on 3 hot deals today — subscribe now to avoid it again.”",
+    "psychology_trigger": "Counterfactual thinking + FOMO",
+    "business_use_case": "Send regret-based re-engagement emails or notifications to re-capture attention and conversion."
+  },
+    {
+    "id": 41,
+    "title": "Synthetic Social Proof",
+    "concept": "Simulate user activity or demand to imply popularity and credibility.",
+    "real_life_example": "“3 people just bought this!” popups, even if scripted.",
+    "psychology_trigger": "Herd behavior",
+    "business_use_case": "Use real-time or simulated engagement signals to increase trust and urgency on landing pages or checkout flows."
+  },
+  {
+    "id": 42,
+    "title": "Partial Reveal Trap",
+    "concept": "Give just enough information to spark curiosity but require action to see the full thing.",
+    "real_life_example": "Blurred price, feature, or photo with a ‘create an account to view’ button.",
+    "psychology_trigger": "Information gap theory",
+    "business_use_case": "Use previews and blur effects to tease gated content and increase signups or clicks."
+  },
+  {
+    "id": 43,
+    "title": "Pain-Point Priming",
+    "concept": "Intensify awareness of a user's problem right before pitching the solution.",
+    "real_life_example": "Weight-loss ads starting with scary health statistics before offering a plan.",
+    "psychology_trigger": "Negativity bias",
+    "business_use_case": "Open sales pages or videos by pressing hard on the pain before introducing relief."
+  },
+  {
+    "id": 44,
+    "title": "The Anti-Choice Reversal",
+    "concept": "Present one option as so obviously wrong that the other seems like the only logical choice.",
+    "real_life_example": "“Continue with ads and limited features, or upgrade to premium.”",
+    "psychology_trigger": "Binary framing",
+    "business_use_case": "Design binary funnels where one option subtly insults or frustrates, nudging the premium choice."
+  },
+  {
+    "id": 45,
+    "title": "Reward Prediction Error",
+    "concept": "Occasionally surprise users with better-than-expected outcomes to trigger addiction loops.",
+    "real_life_example": "Food delivery apps randomly giving free delivery or hidden rewards.",
+    "psychology_trigger": "Neural reward spike",
+    "business_use_case": "Introduce occasional surprise perks or upgrades to increase dopamine-driven retention."
+  },
+  {
+    "id": 46,
+    "title": "Silent Shaming",
+    "concept": "Use passive-aggressive messaging when users try to cancel or back out.",
+    "real_life_example": "“I’m too weak to finish my goals” as the opt-out option on fitness apps.",
+    "psychology_trigger": "Guilt + shame reinforcement",
+    "business_use_case": "Design cancel buttons or unsubscribe flows to make users reconsider via emotional manipulation."
+  },
+  {
+    "id": 47,
+    "title": "Recency Echo",
+    "concept": "Resurface past user behavior to trigger a return or deeper investment.",
+    "real_life_example": "“Finish what you started” reminders from Udemy or Duolingo.",
+    "psychology_trigger": "Memory anchoring",
+    "business_use_case": "Send automated nudges using unfinished progress or last-visited items to revive engagement."
+  },
+  {
+    "id": 48,
+    "title": "Moral Licensing Loop",
+    "concept": "Let users feel they’ve done something good so they justify a selfish choice next.",
+    "real_life_example": "“You just donated $1 to a cause — reward yourself with 20% off.”",
+    "psychology_trigger": "Self-licensing",
+    "business_use_case": "Pair altruistic actions (like donations or pledges) with upsells or cross-sells to increase cart size."
+  },
+  {
+    "id": 49,
+    "title": "Progress Reset Fear",
+    "concept": "Warn users they’ll lose progress, points, or status if they stop now.",
+    "real_life_example": "“Leave now and lose your streak.”",
+    "psychology_trigger": "Loss aversion + progress preservation",
+    "business_use_case": "Display visual reminders of what users risk losing when they cancel or stop engaging."
+  },
+  {
+    "id": 50,
+    "title": "False Personalization",
+    "concept": "Use vague tokens of identity to make users feel seen, even if it’s not truly personalized.",
+    "real_life_example": "“This is perfect for people like you” without knowing anything about the user.",
+    "psychology_trigger": "Ego resonance",
+    "business_use_case": "Use conditional placeholders, avatars, or location-based phrases to increase emotional relevance cheaply."
+  },
+    {
+    "id": 51,
+    "title": "Pseudo-Personal Pressure",
+    "concept": "Make a mass message feel like it was sent specifically to the user.",
+    "real_life_example": "Emails that say “Hey [FirstName], I made this just for you.”",
+    "psychology_trigger": "Reciprocity + personalization bias",
+    "business_use_case": "Automate outreach at scale while keeping a tone that mimics 1-on-1 contact to increase open and click rates."
+  },
+  {
+    "id": 52,
+    "title": "Unfinishable Game",
+    "concept": "Design tasks or systems with no clear end, so users keep chasing progress.",
+    "real_life_example": "Infinite scroll feeds, or loyalty programs with ever-increasing tiers.",
+    "psychology_trigger": "Zeigarnik effect + infinite loop bias",
+    "business_use_case": "Build progress-based systems that hint at closure, but always offer ‘just one more step’ to increase time-on-platform."
+  },
+  {
+    "id": 53,
+    "title": "The Empathy Lure",
+    "concept": "Use emotionally charged visuals or stories to soften rational defenses before pitching.",
+    "real_life_example": "Fundraising platforms showing sick children before asking for a donation.",
+    "psychology_trigger": "Emotional hijack",
+    "business_use_case": "Start with human-centered, emotionally powerful visuals to open wallets faster and raise conversion rates."
+  },
+  {
+    "id": 54,
+    "title": "Invisible Default Bias",
+    "concept": "Pre-select options that benefit the business, knowing most users won't change them.",
+    "real_life_example": "Auto-adding insurance or newsletter checkboxes to purchases.",
+    "psychology_trigger": "Default effect",
+    "business_use_case": "Set defaults in forms, billing, and product settings to silently optimize for business growth."
+  },
+  {
+    "id": 55,
+    "title": "Cognitive Jamming",
+    "concept": "Interrupt rational thinking with motion, noise, or visuals that increase impulsive behavior.",
+    "real_life_example": "Flashing sales banners or countdown popups during checkout.",
+    "psychology_trigger": "Cognitive overload",
+    "business_use_case": "Temporarily disrupt logic with sensory triggers to drive fast, emotion-based decisions."
+  },
+  {
+    "id": 56,
+    "title": "Vanity Metric Bait",
+    "concept": "Show users ego-boosting numbers to inflate their sense of achievement.",
+    "real_life_example": "“Your profile was viewed 274 times this week!” on LinkedIn.",
+    "psychology_trigger": "Self-enhancement bias",
+    "business_use_case": "Create a feedback system around stats that make users feel important — and want more."
+  },
+  {
+    "id": 57,
+    "title": "Commitment Lock-In",
+    "concept": "Ask users to declare goals publicly or semi-publicly to increase future follow-through.",
+    "real_life_example": "“Share your 30-day challenge with friends!”",
+    "psychology_trigger": "Public consistency pressure",
+    "business_use_case": "Get users to commit and share goals or progress — increases return visits and product engagement."
+  },
+  {
+    "id": 58,
+    "title": "Crisis Framing",
+    "concept": "Frame a situation as an urgent crisis that only your product can resolve.",
+    "real_life_example": "“Your credit score could drop 40 points unless you act now.”",
+    "psychology_trigger": "Threat salience",
+    "business_use_case": "Use urgent risk language (ethically) to frame your offering as a protective solution."
+  },
+  {
+    "id": 59,
+    "title": "Post-Exit Friction",
+    "concept": "Delay or obstruct cancellation flows to exhaust users into giving up.",
+    "real_life_example": "Canceling via email or call only — not in the app.",
+    "psychology_trigger": "Friction fatigue",
+    "business_use_case": "Design opt-out flows that take effort to reduce churn from casual quitters (note: use carefully to avoid backlash)."
+  },
+  {
+    "id": 60,
+    "title": "One-Way Transparency",
+    "concept": "Show user data to increase perceived fairness, without revealing your own mechanics.",
+    "real_life_example": "Spotify Wrapped shows listening stats, but not how your data is used behind the scenes.",
+    "psychology_trigger": "Transparency illusion",
+    "business_use_case": "Share data back to users in a curated format to build trust while retaining control over business levers."
   }
 ]
 
