--- a/dark_psychology.html
+++ b/dark_psychology.html
@@ -601,6 +601,230 @@
     "real_life_example": "Spotify Wrapped shows listening stats, but not how your data is used behind the scenes.",
     "psychology_trigger": "Transparency illusion",
     "business_use_case": "Share data back to users in a curated format to build trust while retaining control over business levers."
+  },
+    {
+    "id": 61,
+    "title": "Scarcity Reversal Loop",
+    "concept": "Create false scarcity, then ‘unlock’ access later to feel like a reward.",
+    "real_life_example": "“Sold out — but just opened 5 extra slots for you!”",
+    "psychology_trigger": "Scarcity relief bias",
+    "business_use_case": "Use temporary scarcity followed by controlled re-release to generate relief-driven conversions."
+  },
+  {
+    "id": 62,
+    "title": "The Sympathy Hook",
+    "concept": "Portray your brand as struggling, small, or ‘against the odds’ to trigger support.",
+    "real_life_example": "“We’re a small business trying to survive — every order helps!”",
+    "psychology_trigger": "Underdog effect",
+    "business_use_case": "Use origin story + underdog framing to build customer loyalty and defend premium pricing."
+  },
+  {
+    "id": 63,
+    "title": "Unpredictable Friction",
+    "concept": "Randomize friction points to disorient and redirect user behavior.",
+    "real_life_example": "Different checkout flow each time; surprise captcha or re-auth.",
+    "psychology_trigger": "Learned helplessness",
+    "business_use_case": "Control user behavior by selectively adding friction to steer or slow undesirable actions (e.g., canceling)."
+  },
+  {
+    "id": 64,
+    "title": "Belonging Cue Injection",
+    "concept": "Signal social group membership to make users feel they’re part of an in-group.",
+    "real_life_example": "“Join 10,000 other creatives using this tool.”",
+    "psychology_trigger": "Tribal identity",
+    "business_use_case": "Craft copy and onboarding that makes users feel like they’re joining a niche tribe or exclusive circle."
+  },
+  {
+    "id": 65,
+    "title": "False Outcome Framing",
+    "concept": "Frame one option as a guaranteed negative to steer users to your preferred outcome.",
+    "real_life_example": "“Basic plan = fewer protections and lower visibility.”",
+    "psychology_trigger": "Negative framing bias",
+    "business_use_case": "Present limited plans or options with harsh downsides to guide users toward upsells or feature-rich tiers."
+  },
+  {
+    "id": 66,
+    "title": "Reverse Compliment Bait",
+    "concept": "Insult the user slightly to make them want to prove you wrong or buy to redeem themselves.",
+    "real_life_example": "“Not everyone can handle this challenge — think you're up for it?”",
+    "psychology_trigger": "Challenge bias + ego trigger",
+    "business_use_case": "Use mild status-threatening copy to spark pride-based conversion actions."
+  },
+  {
+    "id": 67,
+    "title": "Gamified Delay",
+    "concept": "Make wait times feel productive or addictive to reduce churn or increase monetization.",
+    "real_life_example": "Mobile games where you wait to unlock unless you pay to skip.",
+    "psychology_trigger": "Anticipation bias",
+    "business_use_case": "Use artificial time delays + pay-to-skip mechanics to generate urgency-driven revenue."
+  },
+  {
+    "id": 68,
+    "title": "Preemptive Validation",
+    "concept": "Tell users they made the right decision before they even act.",
+    "real_life_example": "“Great choice! Most smart customers go with this.” before selection is made.",
+    "psychology_trigger": "Self-affirmation bias",
+    "business_use_case": "Reinforce product or plan selection early to reduce buyer hesitation and increase confidence in choices."
+  },
+  {
+    "id": 69,
+    "title": "Shame-Based Leaderboards",
+    "concept": "Use public or semi-public rankings to pressure users into higher engagement.",
+    "real_life_example": "“You’re in the bottom 15% of your group — pick up the pace!”",
+    "psychology_trigger": "Social comparison stress",
+    "business_use_case": "Leverage leaderboard mechanics with threat of low status to stimulate repeated action or purchases."
+  },
+  {
+    "id": 70,
+    "title": "Fake Urgency Timer Reset",
+    "concept": "Countdown timer that resets when you reload — but still creates urgency.",
+    "real_life_example": "“Deal expires in 05:00”... reload... still 05:00.",
+    "psychology_trigger": "Urgency illusion",
+    "business_use_case": "Use JavaScript countdowns to manufacture urgency without needing real expiration."
+  },
+    {
+    "id": 71,
+    "title": "Delayed Clarity",
+    "concept": "Hide important information behind steps so users commit before realizing trade-offs.",
+    "real_life_example": "Only revealing shipping costs at the last checkout step.",
+    "psychology_trigger": "Commitment bias",
+    "business_use_case": "Structure flows so effort precedes the reveal of friction — reducing drop-offs until the very end."
+  },
+  {
+    "id": 72,
+    "title": "The Selective Spotlight",
+    "concept": "Only show testimonials or reviews that reflect your narrative — omitting broader context.",
+    "real_life_example": "Highlighting 5-star reviews only, with no review filtering options.",
+    "psychology_trigger": "Confirmation bias",
+    "business_use_case": "Craft credibility by curating proof, not fabricating it — guide perception via selective visibility."
+  },
+  {
+    "id": 73,
+    "title": "Effort-Justification Onboarding",
+    "concept": "Force users to put in effort early so they rationalize the product’s value.",
+    "real_life_example": "Spending 15 minutes customizing a profile before seeing if the tool is worth using.",
+    "psychology_trigger": "Cognitive dissonance resolution",
+    "business_use_case": "Front-load effort to increase long-term usage by triggering sunk cost rationalization."
+  },
+  {
+    "id": 74,
+    "title": "The Illusion of Unique Fit",
+    "concept": "Tell users the product was tailored specifically for them, even when it’s generic.",
+    "real_life_example": "“We matched this exact solution to your profile” — without any actual customization.",
+    "psychology_trigger": "Personalization bias",
+    "business_use_case": "Use vague identity mirroring language to boost click-throughs and relevance perception."
+  },
+  {
+    "id": 75,
+    "title": "Withdrawal Framing",
+    "concept": "Make stopping or canceling sound like giving something up — not just opting out.",
+    "real_life_example": "“By canceling, you’ll lose access to your premium insights and rewards.”",
+    "psychology_trigger": "Framing + loss aversion",
+    "business_use_case": "Reframe exits as active self-denial, not neutral choices, to decrease churn."
+  },
+  {
+    "id": 76,
+    "title": "Symbolic Progress Anchoring",
+    "concept": "Use fake metrics (like points or stars) to represent progress and encourage continued effort.",
+    "real_life_example": "“You’ve earned 140/500 XP toward your next badge.”",
+    "psychology_trigger": "Progress illusion",
+    "business_use_case": "Invent visualized metrics to gamify behavior and add perceived value to continued use."
+  },
+  {
+    "id": 77,
+    "title": "Distraction Bypass",
+    "concept": "Insert visual or motion-based distractions near key decisions to reduce scrutiny.",
+    "real_life_example": "Animated confetti while asking for permission to upsell or auto-renew.",
+    "psychology_trigger": "Cognitive load interference",
+    "business_use_case": "Use celebratory visuals to temporarily overwhelm critical thinking during upsell moments."
+  },
+  {
+    "id": 78,
+    "title": "Pre-Loaded Gratitude Debt",
+    "concept": "Make users feel they’ve already been helped, so paying feels like giving back.",
+    "real_life_example": "“We’ve calculated your savings — now tip our algorithm!”",
+    "psychology_trigger": "Reciprocal debt",
+    "business_use_case": "Trigger post-use tipping or donations by implying earlier value already delivered."
+  },
+    {
+    "id": 79,
+    "title": "The Interruption Spike",
+    "concept": "Strategically interrupt user flow to capture attention at maximum susceptibility.",
+    "real_life_example": "Exit-intent popups with 20% off just as the cursor moves to close the page.",
+    "psychology_trigger": "Interrupt pattern + loss aversion",
+    "business_use_case": "Use micro-interruptions at moments of hesitation (cart abandonment, form exit) to rescue conversions."
+  },
+  {
+    "id": 80,
+    "title": "Depletion Delay",
+    "concept": "Warn users they are nearly out of something (data, tokens, credits) to push urgent top-ups.",
+    "real_life_example": "“Only 1 download left — upgrade now!”",
+    "psychology_trigger": "Scarcity stress",
+    "business_use_case": "Create low-threshold ceilings and auto-warnings that generate urgency to upgrade or buy more."
+  },
+  {
+    "id": 81,
+    "title": "The Sympathy Blocker",
+    "concept": "Use emotionally painful actions as the cost of canceling or exiting.",
+    "real_life_example": "“Tell us why you’re leaving — we read every response.”",
+    "psychology_trigger": "Empathy discomfort",
+    "business_use_case": "Add guilt-inducing feedback forms or sad UX to make cancellations emotionally harder."
+  },
+  {
+    "id": 82,
+    "title": "Ghost Benefit Framing",
+    "concept": "Mention features or benefits users never knew they had — right before they're taken away.",
+    "real_life_example": "“You’re about to lose early access and VIP support by downgrading.”",
+    "psychology_trigger": "Phantom loss effect",
+    "business_use_case": "Invent soft, invisible perks and only surface them during retention-critical moments to prevent churn."
+  },
+  {
+    "id": 83,
+    "title": "Endowment Fragmentation",
+    "concept": "Break down a benefit into many smaller ones to make the loss feel bigger.",
+    "real_life_example": "“Downgrading means losing 5 playlists, 10 credits, and 3 bonus tokens.”",
+    "psychology_trigger": "Endowment effect + detail stacking",
+    "business_use_case": "Decompose value into granular pieces during cancellation to magnify the perceived cost of leaving."
+  },
+  {
+    "id": 84,
+    "title": "Authority Bleed",
+    "concept": "Borrow credibility by physically or visually placing your brand next to trusted symbols.",
+    "real_life_example": "Logos placed near Google, Apple, or Stripe — even with no official partnership.",
+    "psychology_trigger": "Proximity halo effect",
+    "business_use_case": "Position your product near trusted brands or people (visually or verbally) to borrow their trust cache."
+  },
+  {
+    "id": 85,
+    "title": "Self-Surveillance Triggers",
+    "concept": "Remind users they are being tracked — encouraging 'better' behavior or spending.",
+    "real_life_example": "“Your profile score is visible to recruiters — keep it up!”",
+    "psychology_trigger": "Panopticon effect",
+    "business_use_case": "Make users aware of public-facing stats or behavior logs to increase performance and interaction."
+  },
+  {
+    "id": 86,
+    "title": "Reflexive Scarcity Gating",
+    "concept": "Use an access gate that appears only after initial interest is shown.",
+    "real_life_example": "Clicking a product link shows 'this item is invite-only'.",
+    "psychology_trigger": "Reflex reversal + sunk attention",
+    "business_use_case": "Block access mid-journey to create frustration-driven conversions or email captures."
+  },
+  {
+    "id": 87,
+    "title": "The Reverse Surprise",
+    "concept": "Reveal a hidden obstacle or catch *after* the user completes several steps.",
+    "real_life_example": "Free eBook → required credit card → surprise auto-renew after 7 days.",
+    "psychology_trigger": "End-cost bias",
+    "business_use_case": "Delay the reveal of a cost or condition until after momentum is built — especially in onboarding or checkout."
+  },
+  {
+    "id": 88,
+    "title": "Identity Hijack",
+    "concept": "Reinforce that using your platform reflects or shapes who the user is.",
+    "real_life_example": "“Serious designers use this tool” or “Real marketers don’t settle for less.”",
+    "psychology_trigger": "Ego resonance + identity fusion",
+    "business_use_case": "Frame your brand as part of a superior identity group that users aspire to join or remain part of."
   }
 ]
 
